examples/valid/program73.c
int main() {
    int x;
    int y;
    x = 0;
    y = 10;
    if (x > 0 || y > 0 || x == y) {
        return 1;
    }
    return 0;
}

