examples/invalid/program55.c
int main() {
    int x;
    x = 5;
    if (x > 0 ||) {
        return 1;
    }
    return 0;
}

